--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,6 @@ serde_json = "1.0"
 tokio = { version = "1.35", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-diesel = { version = "2.1", features = ["postgres"] }
+diesel = { version = "2.1", features = ["postgres", "chrono", "r2d2"] }
 dotenvy = "0.15"
+chrono = {version = "0.4", features = ["serde"]}
