--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 diesel = { version = "2.1", features = ["postgres", "chrono", "r2d2"] }
 dotenvy = "0.15"
 chrono = {version = "0.4", features = ["serde"]}
+tower = "0.4"
+tower-http = { version = "0.5", features = ["full"] }
